# adonis-work-flow-server

./: .env  .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/data/: mod.rs  run_database.rs
src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
src/routes/: mod.rs
src/routes/tasks/: atomic_update_tasks.rs  create_task.rs  delete_task.rs  get_all_tasks.rs  get_task_by_id.rs  mod.rs  partial_update_tasks.rs
src/routes/users/: create_user.rs  guard.rs  login.rs  logout.rs  mod.rs
src/utils/: app_error.rs  jwt.rs
